Thu Mar 27 05:06:00 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (netent:addrtype, servent:port): added missing
	procedures.
	(netent:net, servent:proto): repaired.
	(utsname:sysname etc.): new accessors for uname.

Tue Mar 25 03:04:03 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (sockaddr:fam, sockaddr:path, sockaddr:addr,
	sockaddr:port): new functions.

Wed Mar 19 04:50:34 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: define accessor procedures for the objects returned
	by getpw, getgr, gethost, getnet, getproto, getserv (e.g.,
	passwd:name, where the first component is the name of the C structure
 	and the second is the unprefixed C member name.)

Tue Mar 18 18:39:31 1997  Gary Houston  <ghouston@actrix.gen.nz>

*	* boot-9.scm (setpwent, setgrent, sethostent, setnetent, setprotoent,
	setservent): no longer take an argument, it was bogus.

Thu Mar 13 00:13:41 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (scm-error): deleted, reimplemented in C.

Mon Mar 10 15:48:31 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (process-define-module): Modified to handle both
	keywords and symbols.

Sat Mar  8 04:32:44 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* slib.scm: update read usage.

	* r4rs.scm: update primitive-load usage.
	Don't define read-sharp.

	* boot-9.scm: use read-hash-extend to install extra read syntax.
	(read-sharp): removed.
	Adjust usage of primitive-load-path, read, which no longer take
	case_i or read-sharp arguments.

Sat Mar  8 00:07:54 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Added loading of session support module.

	* debug.scm: Removed `display-application'.  (Replaced by
 	primitive procedure.)

	* boot-9.scm (beautify-user-module!): Don't add the root module
	interface to the end of the use-list of the root module.

Thu Mar  6 07:26:34 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: repl-quit, repl-abort: obsolete variables deleted.
